--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ old_files/
 info.txt
 results/*.poly
 results/*.csv
-data/*
+data/realworld
+data/synthetic
 optimizedFostersAlgorithm/results/*
+optimizedFostersAlgorithm/readShapefile-original.cpp
 polyclip
